--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Documento HTML</title>
 </head>
 <body>
-    <h1>Estoy en mi rama formulario</h1>
+    <div style="border: 1px solid black; width: 350px; height: 150px;">
+        <h3>Hola soy un div</h3>
+        <h1>Hola Mundo</h1>
+    </div>
+
+    <label for="nombre">Nombre: </label>
+     <input type="text" id="nombre" placeholder="Ingrese solo el nombre.">  <br>
+     <label for="password">Password: </label>
+     <input type="password" id="password"> <br>
+     <label for="fecha">Fecha de nacimiento: </label>
+     <input type="date" name="" id="fecha"> <br>
+     <label for="">Sexo: </label> 
+     <select name="" id="">
+        <option value="M">Masculino</option>
+        <option value="F">Femenino</option>
+        <option value="O">Otros</option>
+     </select> <br>
+
+     <label for="">Indique las mascotas que tiene:</label> <br>
+     <input type="checkbox" value="GATO"> <strong>Gato</strong> <br>
+     <input type="checkbox" value="PERRO"> <strong>Perro</strong> <br>
+     <input type="checkbox" value="ELEFANTE"> <strong>Elefante</strong><br>
+
+     <label for="perfil">Foto de perfil:</label><br>
+     <input type="file" id="perfil">
 </body>
 </html>
